Fix section height on small screens

--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -3,6 +3,7 @@ $secondary-color: rgb(255, 136, 0);
 $black: #303030;
 $white: #fff;
 $gray: #a7a7a7;
-$title-font: "Raleway", Arial, sans-serif;
-$body-font: "Source Sans Pro", Arial, sans-serif;
+$title-font: 'Raleway', Arial, sans-serif;
+$body-font: 'Source Sans Pro', Arial, sans-serif;
 $mobile-breakpoint: 420px;
+$laptop-breakpoint: 1024px;
